[gd_scene load_steps=13 format=3 uid="uid://ha72oknnhgej"]

[ext_resource type="Script" path="res://menus/HUD.gd" id="1_evo51"]
[ext_resource type="Texture2D" uid="uid://i8uk7udigy52" path="res://textures/inventory/slot_border.png" id="2_ciqnw"]
[ext_resource type="Texture2D" uid="uid://byfy15kacumse" path="res://textures/inventory/outfit_sprites.png" id="3_122pe"]
[ext_resource type="Texture2D" uid="uid://dgp5gjuptg8yn" path="res://textures/item_images/lg_gold_sword.png" id="4_1508w"]
[ext_resource type="Texture2D" uid="uid://wcgfbbjbvx3a" path="res://textures/item_images/lg_sulfur_slab.png" id="5_888hy"]

[sub_resource type="TileMapPattern" id="TileMapPattern_d17lv"]
tile_data = PackedInt32Array(65536, 65537, 4, 65537, 65537, 3, 65538, 65537, 2, 3, 1, 2, 65539, 1, 3, 131075, 1, 4, 196611, 1, 5, 262147, 1, 6, 327683, 1, 7, 65540, 131073, 2, 65541, 131073, 3, 65542, 131073, 4)

[sub_resource type="TileMapPattern" id="TileMapPattern_sbrxr"]
tile_data = PackedInt32Array(65536, 65537, 7, 65537, 65537, 6, 65538, 65537, 5, 3, 196609, 2, 65539, 196609, 3, 131075, 196609, 4, 196611, 196609, 5, 262147, 196609, 6, 327683, 196609, 7, 65540, 131073, 5, 65541, 131073, 6, 65542, 131073, 7)

[sub_resource type="TileMapPattern" id="TileMapPattern_038kp"]
tile_data = PackedInt32Array(65536, 327681, 4, 65537, 327681, 3, 65538, 327681, 2, 3, 262145, 2, 65539, 262145, 3, 131075, 262145, 4, 196611, 262145, 5, 262147, 262145, 6, 327683, 262145, 7, 65540, 393217, 2, 65541, 393217, 3, 65542, 327681, 4)

[sub_resource type="TileMapPattern" id="TileMapPattern_tkog0"]
tile_data = PackedInt32Array(65536, 327681, 7, 65537, 327681, 6, 65538, 327681, 5, 3, 458753, 2, 65539, 458753, 3, 131075, 458753, 4, 196611, 458753, 5, 262147, 458753, 6, 327683, 458753, 7, 65540, 393217, 5, 65541, 393217, 6, 65542, 327681, 7)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_urvbb"]
texture = ExtResource("2_ciqnw")
texture_region_size = Vector2i(136, 136)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_675tw"]
texture = ExtResource("3_122pe")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
7:7/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_om5wd"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_urvbb")
sources/1 = SubResource("TileSetAtlasSource_675tw")
pattern_0 = SubResource("TileMapPattern_d17lv")
pattern_1 = SubResource("TileMapPattern_sbrxr")
pattern_2 = SubResource("TileMapPattern_038kp")
pattern_3 = SubResource("TileMapPattern_tkog0")

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_evo51")

[node name="Node2D" type="Node2D" parent="."]

[node name="ret_right" type="Line2D" parent="Node2D"]
points = PackedVector2Array(10, 0, 50, 0)
closed = true
width = 4.0

[node name="ret_left" type="Line2D" parent="Node2D"]
points = PackedVector2Array(-10, 0, -50, 0)
closed = true
width = 4.0

[node name="ret_up" type="Line2D" parent="Node2D"]
points = PackedVector2Array(0, -10, 0, -50)
closed = true
width = 4.0

[node name="ret_down" type="Line2D" parent="Node2D"]
points = PackedVector2Array(0, 10, 0, 50)
closed = true
width = 4.0

[node name="slot_map" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="slot_map"]
tile_set = SubResource("TileSet_om5wd")
format = 2
layer_0/name = "selectied_tile"
layer_0/modulate = Color(0.5, 0.375, 0.75, 1)
layer_0/z_index = 3
layer_0/tile_data = PackedInt32Array(524284, 0, 0)
layer_1/name = "slot_borders"
layer_1/z_index = 2
layer_1/tile_data = PackedInt32Array(524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 393220, 65536, 0, 458756, 65536, 1, 393221, 131072, 0, 458757, 131072, 1, 458746, 65536, 0, 524282, 65536, 1, 458747, 131072, 0, 524283, 131072, 1)
layer_2/name = "items"
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array()
layer_3/name = "gear_icons"
layer_3/modulate = Color(1, 1, 1, 0.501961)
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array(393220, 393217, 0, 458756, 393217, 1, 393221, 458753, 0, 458757, 458753, 1, 458746, 262145, 0, 524282, 262145, 1, 458747, 327681, 0, 524283, 327681, 1)
layer_4/name = "background"
layer_4/modulate = Color(1, 1, 1, 0.501961)
layer_4/tile_data = PackedInt32Array(393220, 1, 0, 458756, 1, 0, 458757, 1, 0, 393221, 1, 0, 458755, 1, 0, 458754, 1, 0, 458753, 1, 0, 458752, 1, 0, 524287, 1, 0, 524286, 1, 0, 524285, 1, 0, 524284, 1, 0, 524283, 1, 0, 524282, 1, 0, 458746, 1, 0, 458747, 1, 0)

[node name="armament_left" type="Sprite2D" parent="slot_map"]
z_index = 2
position = Vector2(-640, 896)
texture = ExtResource("4_1508w")

[node name="armament_right" type="Sprite2D" parent="slot_map"]
z_index = 2
position = Vector2(640, 896)
texture = ExtResource("5_888hy")

[node name="items" type="Node2D" parent="slot_map"]
z_index = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="selection_wheel" type="Control" parent="CenterContainer"]
layout_mode = 2
